Fri May 17 08:33:41 CEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Fixed watcher list checking during server signoff.  It
	  crashed the server.  Affected file silcd/server_util.c.

	* The JOIN command reply returns now the founder's public
	  key.  Affected file is silcd/command.c.

	* Announce the channel mode, and the mode properties with
	  CMODE_CHANGE notify.  Affected file silcd/server.c.

	* Mark new channels by default disabled, untill at least
	  one user joins the channel.  Affected file is
 	  silcd/packet_receive.c.

Thu May 16 13:05:13 CEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* The nickname argument to watch notify can be optional.
	  Fixes a crash in server.  Affected file silcd/packet_send.c.

	* Remove the client entry from cache if the WATCH notify type
	  is KILLED, SERVER_SIGNOFF or SIGNOFF.  Affected file is
	  lib/silcclient/client_notify.c.

	* Check the watcher list before and after changing nickname
	  when the NICK_CHANGE notify is received.  Affected file is
	  silcd/idlist.c.

	* Fixed a crash in OPER and SILCOPER command sending.  Empty
	  passphrase caused the crash.  Affected file is
	  lib/silcclient/command.c.

Wed May 15 19:01:42 EEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Merged with Irssi CVS for Irssi SILC client.

Tue May 14 19:37:48 EEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Completed the protocol specifications.

Tue May  7 20:41:58 EEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Merged with Irssi CVS for Irssi SILC client.

Tue May  7 11:07:16 EEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Added the founder's public key delivery to the
	  CUMODE_CHANGE notify type as well.  Updated the protocol
	  specs and the code.  Affected files are silcd/packet_send.[ch],
	  silcd/packet_receive.c and silcd/command.c.

Mon May  6 19:46:12 EEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Added silc_pkcs_public_key_copy function into the
	  lib/silccrypt/silcpkcs.[ch].
