@@ -2533,6 +2533,11 @@ void silc_server_free_client_data(SilcServer server,
   silc_server_packet_queue_purge(server, sock);
 
   if (client->id) {
+    /* Check if anyone is watching this nickname */
+    if (server->server_type == SILC_ROUTER)
+      silc_server_check_watcher_list(server, client, NULL,
+				     SILC_NOTIFY_TYPE_SIGNOFF);
+
     /* Send SIGNOFF notify to routers. */
     if (notify && !server->standalone && server->router)
       silc_server_send_notify_signoff(server, server->router->connection,
@@ -2546,11 +2551,6 @@ void silc_server_free_client_data(SilcServer server,
     else
       silc_server_remove_from_channels(server, NULL, client,
 				       FALSE, NULL, FALSE);
-
-    /* Check if anyone is watching this nickname */
-    if (server->server_type == SILC_ROUTER)
-      silc_server_check_watcher_list(server, client, NULL,
-				     SILC_NOTIFY_TYPE_SIGNOFF);
 
     /* Remove this client from watcher list if it is */
     silc_server_del_from_watcher_list(server, client);
