@@ -1,3 +1,9 @@
+Fri May 17 17:23:45 EEST 2002 Pekka Riikonen <priikone@silcnet.org>
+
+	* Check the watcher list before sending signoff notifys
+	  when closing client connection.  Affected file is
+	  silcd/server.c.
+
 Fri May 17 08:33:41 CEST 2002 Pekka Riikonen <priikone@silcnet.org>
 
 	* Fixed watcher list checking during server signoff.  It
